--- a/lettre_20251001_163714.tex
+++ b/lettre_20251001_163714.tex
@@ -172,7 +172,7 @@ Currently pursuing a Master’s degree in \textbf{Software Engineering for the W
 \textcolor{blue}{\Large •} 
 \href{https://www.coursera.org/specializations/python}{Python for Everybody – University of Michigan} 
 \textcolor{blue}{\Large •} 
-\href{https://www.freecodecamp.org/learn/javascript-algorithms-and-data-structures/}{JavaScript Algorithms & Data Structures – freeCodeCamp} 
+\href{https://www.freecodecamp.org/learn/javascript-algorithms-and-data-structures/}{JavaScript Algorithms and Data Structures – freeCodeCamp} 
 \textcolor{blue}{\Large •} 
 \href{https://www.udemy.com/course/angular-complete-guide/}{Angular Complete Guide – Udemy}
 
