--- a/lettre_20251001_163714.tex
+++ b/lettre_20251001_163714.tex
@@ -200,7 +200,7 @@ Currently pursuing a Master’s degree in \textbf{Software Engineering for the W
     baseline,
     % Allows width to adjust to content while setting a minimum for small words
     width=auto,
-    minimum width=55pt,
+    min width=55pt,
     box align=center
 }
 
