Add vertical space before SKILLS section

--- a/lettre_20251001_163714.tex
+++ b/lettre_20251001_163714.tex
@@ -186,7 +186,7 @@ Currently pursuing a Master’s degree in \textbf{Software Engineering for the W
 % ==== Skills ====
 % ==== Skills ====
 \SectionBox{SKILLS}
-
+\vspace{1cm}
 \tcbset{
     on line,
     colback=gray!20,
