--- a/lettre_20251001_163714.tex
+++ b/lettre_20251001_163714.tex
@@ -30,6 +30,8 @@
     arc=8pt,            % rounded corners
     left=5pt, right=5pt, top=4pt, bottom=4pt,
     width=\textwidth,   % full width
+    halign=center,      % ✅ centers text horizontally
+    valign=center       % ✅ centers vertically in case of multiple lines
 ]
 \textbf{\large #1}
 \end{tcolorbox}
