--- a/lettre_20251001_163714.tex
+++ b/lettre_20251001_163714.tex
@@ -5,7 +5,7 @@
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage{array}
-\usepackage{xcolor}
+% \usepackage{xcolor}
 \usepackage[hidelinks]{hyperref}
 \usepackage{enumitem}
 \usepackage{pifont}
