--- a/lettre_20251001_163714.tex
+++ b/lettre_20251001_163714.tex
@@ -18,7 +18,7 @@
 \usepackage{contour}
 \contourlength{0.6pt} % thickness of the outline
 
-\usepackage[HTML]{xcolor}
+% \usepackage[HTML]{xcolor}
 
 \setlength{\parindent}{0pt}
 
