Enable xcolor package in LaTeX document
Uncomment xcolor package for color support.

--- a/lettre_20251001_163714.tex
+++ b/lettre_20251001_163714.tex
@@ -5,7 +5,7 @@
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage{array}
-\usepackage{xcolor}
+% \usepackage{xcolor}
 \usepackage[hidelinks]{hyperref}
 \usepackage{enumitem}
 \usepackage{pifont}
@@ -18,7 +18,7 @@
 \usepackage{contour}
 \contourlength{0.6pt} % thickness of the outline
 
-% \usepackage[HTML]{xcolor}
+\usepackage[HTML]{xcolor}
 
 \setlength{\parindent}{0pt}
 
