--- a/lettre_20251001_163714.tex
+++ b/lettre_20251001_163714.tex
@@ -5,7 +5,7 @@
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage{array}
-% \usepackage{xcolor}
+\usepackage{xcolor}
 \usepackage[hidelinks]{hyperref}
 \usepackage{enumitem}
 \usepackage{pifont}
@@ -18,7 +18,6 @@
 \usepackage{contour}
 \contourlength{0.6pt} % thickness of the outline
 
-\usepackage[HTML]{xcolor}
 
 \setlength{\parindent}{0pt}
 
@@ -133,7 +132,7 @@ Currently pursuing a Master’s degree in \textbf{Software Engineering for the W
     \item Data analysis and visualization of real-world datasets with interactive charts.
 \end{itemize}
 
-\vspace{0.1cm}
+\vspace{0.2cm}
 \noindent
 \begin{tabular*}{\textwidth}{@{\extracolsep{\fill}} l r}
 \textbf{Gesture-Controlled Game (Python, OpenCV, MediaPipe)} \href{https://github.com/azizbelhadjsayar/dashboard-data}{\textcolor{blue}{\faGithub}} & \textbf{2023 \faCalendar} \\
@@ -142,7 +141,7 @@ Currently pursuing a Master’s degree in \textbf{Software Engineering for the W
     \item Interactive game using real-time hand movement detection.
 \end{itemize}
 
-\vspace{0.1cm}
+\vspace{0.2cm}
 \noindent
 \begin{tabular*}{\textwidth}{@{\extracolsep{\fill}} l r}
 \textbf{Library Management App (Java Swing, MySQL)} \href{https://github.com/azizbelhadjsayar/dashboard-data}{\textcolor{blue}{\faGithub}} & \textbf{2023 \faCalendar} \\
@@ -151,7 +150,7 @@ Currently pursuing a Master’s degree in \textbf{Software Engineering for the W
     \item Desktop app featuring barcode generation, scanning, and email alerts.
 \end{itemize}
 
-\vspace{0.1cm}
+\vspace{0.2cm}
 \noindent
 \begin{tabular*}{\textwidth}{@{\extracolsep{\fill}} l r}
 \textbf{HR Management App (C\#, .NET, SQL Server)} \href{https://github.com/azizbelhadjsayar/dashboard-data}{\textcolor{blue}{\faGithub}} & \textbf{2022 \faCalendar} \\
@@ -185,8 +184,7 @@ Currently pursuing a Master’s degree in \textbf{Software Engineering for the W
 % ==== Skills ====
 % ==== Skills (The fix is here) ====
 \SkillsSection
-\vspace{-0.1cm} % Reduce space after the header box to keep it tight
-
+\vspace{0.2cm} % Reduce space after the header box to keep it tight
 \noindent\parbox[t]{\textwidth}{ % <-- Encapsulate entire block for flow isolation
     \tcbset{
         on line,
