--- a/lettre_20251001_163714.tex
+++ b/lettre_20251001_163714.tex
@@ -106,7 +106,7 @@ Currently pursuing a Master’s degree in \textbf{Software Engineering for the W
 \textbf{IHEC Carthage} & \textbf{Tunis, Tunisia \faMapMarker} \\
 \textbf{Bachelor’s in Business Computing (Business Intelligence)} & \textbf{2021 -- 2024 \faCalendar} \\
 \end{tabular*}
-\begin{itemize}[leftmargin=*,itemsep=1pt,topsep=1pt,parsep=0pt,label=\textcolor{red}{$\rightarrow$}]
+\begin{itemize}[leftmargin=*,itemsep=1pt,topsep=1pt,parsep=0pt,label=\textcolor{blue}{\faArrowCircleRight}]
     \item Courses: Business Intelligence, SQL, Data Analysis
 \end{itemize}
 
@@ -117,7 +117,7 @@ Currently pursuing a Master’s degree in \textbf{Software Engineering for the W
 \textbf{Tech Solutions} & \textbf{Paris, France \faMapMarker} \\
 \textbf{Junior Web Developer} & \textbf{2023 -- 2024 \faCalendar} \\
 \end{tabular*}
-\begin{itemize}[leftmargin=*,itemsep=1pt,topsep=1pt,parsep=0pt,label=\textcolor{green}{$\rightarrow$}]
+\begin{itemize}[leftmargin=*,itemsep=1pt,topsep=1pt,parsep=0pt,label=\textcolor{blue}{\faArrowCircleRight}]
     \item Developed an internal web application using Python and Angular
     \item Optimized SQL database performance
 \end{itemize}
@@ -128,7 +128,7 @@ Currently pursuing a Master’s degree in \textbf{Software Engineering for the W
 \begin{tabular*}{\textwidth}{@{\extracolsep{\fill}} l r}
 \textbf{Interactive Dashboard (Python, Streamlit)} \href{https://github.com/azizbelhadjsayar/dashboard-data}{\textcolor{blue}{\faGithub}} & \textbf{2024 \faCalendar} \\
 \end{tabular*}
-\begin{itemize}[leftmargin=*,itemsep=1pt,topsep=1pt,parsep=0pt,label=\textcolor{orange}{$\rightarrow$}]
+\begin{itemize}[leftmargin=*,itemsep=1pt,topsep=1pt,parsep=0pt,label=\textcolor{blue}{\faArrowCircleRight}]
     \item Data analysis and visualization of real-world datasets with interactive charts.
 \end{itemize}
 
@@ -137,7 +137,7 @@ Currently pursuing a Master’s degree in \textbf{Software Engineering for the W
 \begin{tabular*}{\textwidth}{@{\extracolsep{\fill}} l r}
 \textbf{Gesture-Controlled Game (Python, OpenCV, MediaPipe)} \href{https://github.com/azizbelhadjsayar/dashboard-data}{\textcolor{blue}{\faGithub}} & \textbf{2023 \faCalendar} \\
 \end{tabular*}
-\begin{itemize}[leftmargin=*,itemsep=1pt,topsep=1pt,parsep=0pt,label=\textcolor{orange}{$\rightarrow$}]
+\begin{itemize}[leftmargin=*,itemsep=1pt,topsep=1pt,parsep=0pt,label=\textcolor{blue}{\faArrowCircleRight}]
     \item Interactive game using real-time hand movement detection.
 \end{itemize}
 
@@ -146,7 +146,7 @@ Currently pursuing a Master’s degree in \textbf{Software Engineering for the W
 \begin{tabular*}{\textwidth}{@{\extracolsep{\fill}} l r}
 \textbf{Library Management App (Java Swing, MySQL)} \href{https://github.com/azizbelhadjsayar/dashboard-data}{\textcolor{blue}{\faGithub}} & \textbf{2023 \faCalendar} \\
 \end{tabular*}
-\begin{itemize}[leftmargin=*,itemsep=1pt,topsep=1pt,parsep=0pt,label=\textcolor{orange}{$\rightarrow$}]
+\begin{itemize}[leftmargin=*,itemsep=1pt,topsep=1pt,parsep=0pt,label=\textcolor{blue}{\faArrowCircleRight}]
     \item Desktop app featuring barcode generation, scanning, and email alerts.
 \end{itemize}
 
@@ -155,7 +155,7 @@ Currently pursuing a Master’s degree in \textbf{Software Engineering for the W
 \begin{tabular*}{\textwidth}{@{\extracolsep{\fill}} l r}
 \textbf{HR Management App (C\#, .NET, SQL Server)} \href{https://github.com/azizbelhadjsayar/dashboard-data}{\textcolor{blue}{\faGithub}} & \textbf{2022 \faCalendar} \\
 \end{tabular*}
-\begin{itemize}[leftmargin=*,itemsep=1pt,topsep=1pt,parsep=0pt,label=\textcolor{orange}{$\rightarrow$}]
+\begin{itemize}[leftmargin=*,itemsep=1pt,topsep=1pt,parsep=0pt,label=\textcolor{blue}{\faArrowCircleRight}]
     \item Full CRUD management of employees, locations, departments, and jobs.
 \end{itemize}
 
