--- a/test.tex
+++ b/test.tex
@@ -1,3 +1,4 @@
+
 \documentclass[11pt]{article}
 \usepackage[a4paper,margin=1cm]{geometry}
 \usepackage{helvet}
@@ -13,11 +14,10 @@
 \usepackage{graphicx}
 \usepackage[absolute,overlay]{textpos}
 \usepackage{titlesec}
-\usepackage{tcolorbox} % ✅ For rounded colored boxes
+\usepackage{tcolorbox}
 \usepackage{fontawesome}
 \usepackage{contour}
-\contourlength{0.6pt} % thickness of the outline
-
+\contourlength{0.6pt}
 
 \setlength{\parindent}{0pt}
 
@@ -25,14 +25,14 @@
 \newcommand{\SectionBox}[1]{%
 \vspace{6pt}
 \begin{tcolorbox}[
-    colback=black!10,    % background color
-    colframe=black!10,   % border same as background
-    boxrule=0pt,        % no visible border
-    arc=8pt,            % rounded corners
+    colback=black!10,
+    colframe=black!10,
+    boxrule=0pt,
+    arc=8pt,
     left=5pt, right=5pt, top=4pt, bottom=4pt,
-    width=\textwidth,   % full width
-    halign=center,      % ✅ centers text horizontally
-    valign=center       % ✅ centers vertically in case of multiple lines
+    width=\textwidth,
+    halign=center,
+    valign=center
 ]
 \textbf{\large #1}
 \end{tcolorbox}
@@ -45,11 +45,11 @@
 \newcommand{\ExperienceSection}[0]{\SectionBox{PROFESSIONAL EXPERIENCE}}
 \newcommand{\ProjectsSection}[0]{\SectionBox{PROJECTS}}
 \newcommand{\CertificationsSection}[0]{\SectionBox{CERTIFICATIONS}}
-\newcommand{\SkillsSection}[0]{\SectionBox{SKILLS}} % <-- NEW COMMAND
+\newcommand{\SkillsSection}[0]{\SectionBox{SKILLS}}
 \newcommand{\LanguagesSection}[0]{\SectionBox{LANGUAGES}}
 
 \begin{document}
-\pagestyle{empty} 
+\pagestyle{empty}
 
 % ==== Photo ====
 \begin{textblock*}{3cm}(16.7cm,0.84cm)
@@ -58,11 +58,11 @@
 
 % ==== Header inside a rounded box ====
 \begin{tcolorbox}[
-    colback=black!10,       % background color
-    colframe=black!10,      % border color
-    arc=10pt,              % rounded corners (all sides)
-    boxrule=0pt,           % no visible border
-    width=\textwidth,      % full page width
+    colback=black!10,
+    colframe=black!10,
+    arc=10pt,
+    boxrule=0pt,
+    width=\textwidth,
     left=10pt, right=10pt, top=8pt, bottom=6pt
 ]
 {\Huge\bfseries AZIZ BELHADJ SAYAR}\\[8pt]
@@ -72,11 +72,11 @@
 \setlength{\tabcolsep}{6pt}
 {\fontsize{9}{10}\selectfont
 \begin{tabular*}{0.6\textwidth}{@{\extracolsep{\fill}} l l l}
-    \textcolor{blue}{\faPhone} \textbf{+33 6 52 64 32 02} &
-    \textcolor{blue}{\faLinkedin} \href{https://linkedin.com/in/azizbelhadjsayar}{\textbf{linkedin.com/in/azizbelhadjsayar}} &
-    \textcolor{blue}{\faEnvelope} \href{mailto:aziz.belhadjsayar@etud.univ-evry.fr}{\textbf{aziz.belhadjsayar@etud.univ-evry.fr}} \\
-    \textcolor{blue}{\faMapMarker}  \textbf{Paris, France} &
-    \textcolor{blue}{\faGithub} \href{https://github.com/azizbelhadjsayar}{\textbf{github.com/azizbelhadjsayar}} \\
+    \textcolor{blue}{\faPhone} \textbf{+33 6 52 64 32 02} &
+    \textcolor{blue}{\faLinkedin} \href{https://linkedin.com/in/azizbelhadjsayar}{\textbf{linkedin.com/in/azizbelhadjsayar}} &
+    \textcolor{blue}{\faEnvelope} \href{mailto:aziz.belhadjsayar@etud.univ-evry.fr}{\textbf{aziz.belhadjsayar@etud.univ-evry.fr}} \\
+    \textcolor{blue}{\faMapMarker}  \textbf{Paris, France} &
+    \textcolor{blue}{\faGithub} \href{https://github.com/azizbelhadjsayar}{\textbf{github.com/azizbelhadjsayar}} \\
 \end{tabular*}
 }
 \end{tcolorbox}
@@ -126,40 +126,33 @@ Currently pursuing a Master’s degree in \textbf{Software Engineering for the W
 \ProjectsSection
 \noindent
 \begin{tabular*}{\textwidth}{@{\extracolsep{\fill}} l r}
-\textbf{Interactive Dashboard (Python, Streamlit)} \href{https://github.com/azizbelhadjsayar/dashboard-data}{\textcolor{blue}{\faGithub}} & \textbf{2024 \faCalendar} \\
+\textbf{Rental and Item Management Website (PHP, JavaScript, MySQL, Leaflet)} \href{https://github.com/yourusername/rental-website}{\textcolor{blue}{\faGithub}} & \textbf{2024 \faCalendar} \\
 \end{tabular*}
 \begin{itemize}[leftmargin=*,itemsep=1pt,topsep=1pt,parsep=0pt,label=\textcolor{blue}{\faArrowCircleRight}]
-    \item Data analysis and visualization of real-world datasets with interactive charts.
+    \item Built a dynamic website featuring user registration, rental management, interactive maps, and an admin dashboard.
 \end{itemize}
 
 \vspace{0.2cm}
+
 \noindent
 \begin{tabular*}{\textwidth}{@{\extracolsep{\fill}} l r}
-\textbf{Gesture-Controlled Game (Python, OpenCV, MediaPipe)} \href{https://github.com/azizbelhadjsayar/dashboard-data}{\textcolor{blue}{\faGithub}} & \textbf{2023 \faCalendar} \\
+\textbf{Job Matcher (Python, Flask, Scikit-learn, PyPDF2, docx2txt, HTML/CSS)} \href{https://github.com/yourusername/job-matcher}{\textcolor{blue}{\faGithub}} & \textbf{2024 \faCalendar} \\
 \end{tabular*}
 \begin{itemize}[leftmargin=*,itemsep=1pt,topsep=1pt,parsep=0pt,label=\textcolor{blue}{\faArrowCircleRight}]
-    \item Interactive game using real-time hand movement detection.
+    \item Developed a web application that matches CVs and job descriptions using cosine similarity and the Flask framework.
 \end{itemize}
 
 \vspace{0.2cm}
+
 \noindent
 \begin{tabular*}{\textwidth}{@{\extracolsep{\fill}} l r}
-\textbf{Library Management App (Java Swing, MySQL)} \href{https://github.com/azizbelhadjsayar/dashboard-data}{\textcolor{blue}{\faGithub}} & \textbf{2023 \faCalendar} \\
+\textbf{Interactive Dashboard Web App (Streamlit, Python, Pandas, Plotly, Deck.gl)} \href{https://github.com/yourusername/interactive-dashboard}{\textcolor{blue}{\faGithub}} & \textbf{2024 \faCalendar} \\
 \end{tabular*}
 \begin{itemize}[leftmargin=*,itemsep=1pt,topsep=1pt,parsep=0pt,label=\textcolor{blue}{\faArrowCircleRight}]
-    \item Desktop app featuring barcode generation, scanning, and email alerts.
+    \item Built an interactive data visualization and analysis web app with Streamlit.
 \end{itemize}
 
-\vspace{0.2cm}
-\noindent
-\begin{tabular*}{\textwidth}{@{\extracolsep{\fill}} l r}
-\textbf{HR Management App (C\#, .NET, SQL Server)} \href{https://github.com/azizbelhadjsayar/dashboard-data}{\textcolor{blue}{\faGithub}} & \textbf{2022 \faCalendar} \\
-\end{tabular*}
-\begin{itemize}[leftmargin=*,itemsep=1pt,topsep=1pt,parsep=0pt,label=\textcolor{blue}{\faArrowCircleRight}]
-    \item Full CRUD management of employees, locations, departments, and jobs.
-\end{itemize}
 
-% ==== Certifications ====
 % ==== Certifications ====
 \CertificationsSection
 \href{https://www.coursera.org/professional-certificates/google-data-analytics}{Google Data Analytics Professional Certificate} 
@@ -180,29 +173,25 @@ Currently pursuing a Master’s degree in \textbf{Software Engineering for the W
 \textcolor{blue}{\Large •} 
 \href{https://www.udemy.com/course/angular-complete-guide/}{Angular Complete Guide – Udemy}
 
-
 % ==== Skills ====
-% ==== Skills (The fix is here) ====
 \SkillsSection
-\vspace{0.2cm} % Reduce space after the header box to keep it tight
-\noindent\parbox[t]{\textwidth}{ % <-- Encapsulate entire block for flow isolation
+\vspace{0.2cm}
+\noindent\parbox[t]{\textwidth}{
     \tcbset{
         on line,
         colback=gray!20,
         colframe=gray!60,
         arc=4pt,
-        % Tighter padding and height for a sleek look
         top=1pt, bottom=1pt, 
         left=4pt, right=4pt,
         height=16pt,
         valign=center,
         baseline,
-        % Allows width to adjust to content while setting a minimum for small words
         width=auto,
         box align=center
     }
 
-    \noindent\parbox{\textwidth}{ % Ensures the list starts flush left and handles wrapping correctly
+    \noindent\parbox{\textwidth}{
         \tcbox{Python}\hskip 3pt%
         \tcbox{Java}\hskip 3pt%
         \tcbox{C\#}\hskip 3pt%
@@ -224,13 +213,11 @@ Currently pursuing a Master’s degree in \textbf{Software Engineering for the W
         \tcbox{Communication}\hskip 3pt%
         \tcbox{Time Management}%
     }
-} % <-- End of the encapsulation block
-
+}
 
 % ==== Languages ====
 \LanguagesSection
-% ==== Languages Content (Forced to single line without warning) ====
-\hbadness=10000 % <-- Temporarily ignores horizontal spacing warnings
+\hbadness=10000
 \textbf{English:} C2 – \href{https://cert.efset.org/6YsT6y}{\underline{EF SET C2} \faLink} \textbf{ | }
 \textbf{French:} C2 – \href{https://drive.google.com/file/d/1yojzT_8XB7gIulaIKh8TSYeOl8NBXxpR/view}{\underline{TCF C2} \faLink} \textbf{ | }
 \textbf{Arabic:} Native
