--- a/test.tex
+++ b/test.tex
@@ -126,37 +126,28 @@ Currently pursuing a Master’s degree in \textbf{Software Engineering for the W
 \ProjectsSection
 \noindent
 \begin{tabular*}{\textwidth}{@{\extracolsep{\fill}} l r}
-\textbf{Interactive Dashboard (Python, Streamlit)} \href{https://github.com/username/interactive-dashboard}{\textcolor{blue}{\faGithub}} & \textbf{2024 \faCalendar} \
+\textbf{Interactive Dashboard Web App (Streamlit, Python)} \href{#}{\textcolor{blue}{\faGithub}} & \textbf{2024 \faCalendar} \
 \end{tabular*}
 \begin{itemize}[leftmargin=*,itemsep=1pt,topsep=1pt,parsep=0pt,label=\textcolor{blue}{\faArrowCircleRight}]
-    \item Data analysis and visualization of real‑world datasets with interactive charts.
+    \item Interactive data visualization and analysis web app built with Streamlit.
 \end{itemize}
 
 \vspace{0.2cm}
 \noindent
 \begin{tabular*}{\textwidth}{@{\extracolsep{\fill}} l r}
-\textbf{Rental and Item Management Website (PHP, JavaScript, MySQL, Leaflet)} \href{https://github.com/username/rental-website}{\textcolor{blue}{\faGithub}} & \textbf{2024 \faCalendar} \
+\textbf{Rental and Item Management Website (PHP, JavaScript, MySQL)} \href{#}{\textcolor{blue}{\faGithub}} & \textbf{2024 \faCalendar} \
 \end{tabular*}
 \begin{itemize}[leftmargin=*,itemsep=1pt,topsep=1pt,parsep=0pt,label=\textcolor{blue}{\faArrowCircleRight}]
-    \item Built a dynamic website featuring user registration, rental management, interactive maps, and an admin dashboard.
+    \item Dynamic website featuring user registration, rental management, interactive maps, and an admin dashboard.
 \end{itemize}
 
 \vspace{0.2cm}
 \noindent
 \begin{tabular*}{\textwidth}{@{\extracolsep{\fill}} l r}
-\textbf{Job Matcher (Python, Flask, Scikit‑learn, HTML/CSS)} \href{https://github.com/username/job-matcher}{\textcolor{blue}{\faGithub}} & \textbf{2024 \faCalendar} \
+\textbf{Job Matcher (Python, Flask)} \href{#}{\textcolor{blue}{\faGithub}} & \textbf{2024 \faCalendar} \
 \end{tabular*}
 \begin{itemize}[leftmargin=*,itemsep=1pt,topsep=1pt,parsep=0pt,label=\textcolor{blue}{\faArrowCircleRight}]
-    \item Developed a web application that matches CVs and job descriptions using cosine similarity and the Flask framework.
-\end{itemize}
-
-\vspace{0.2cm}
-\noindent
-\begin{tabular*}{\textwidth}{@{\extracolsep{\fill}} l r}
-\textbf{Interactive Dashboard Web App (Streamlit, Python, Pandas, Plotly, Deck.gl)} \href{https://github.com/username/dashboard-web-app}{\textcolor{blue}{\faGithub}} & \textbf{2024 \faCalendar} \
-\end{tabular*}
-\begin{itemize}[leftmargin=*,itemsep=1pt,topsep=1pt,parsep=0pt,label=\textcolor{blue}{\faArrowCircleRight}]
-    \item Built an interactive data visualization and analysis web app with Streamlit.
+    \item Web application that matches CVs and job descriptions using cosine similarity and the Flask framework.
 \end{itemize}
 
 
