--- a/test.tex
+++ b/test.tex
@@ -126,30 +126,38 @@ Currently pursuing a Master’s degree in \textbf{Software Engineering for the W
 \ProjectsSection
 \noindent
 \begin{tabular*}{\textwidth}{@{\extracolsep{\fill}} l r}
-\textbf{Interactive Dashboard Web App (Streamlit, Python)} \href{#}{\textcolor{blue}{\faGithub}} & \textbf{2024 \faCalendar} \
+\textbf{Amazon Reviews Sentiment Analysis (Python, NLTK, Transformers, Pandas, Matplotlib)} \href{#}{\textcolor{blue}{\faGithub}} & \textbf{2024 \faCalendar} \\
 \end{tabular*}
 \begin{itemize}[leftmargin=*,itemsep=1pt,topsep=1pt,parsep=0pt,label=\textcolor{blue}{\faArrowCircleRight}]
-    \item Interactive data visualization and analysis web app built with Streamlit.
+    \item Performed sentiment analysis on Amazon reviews using preprocessed data and models such as Vader and RoBERTa.
 \end{itemize}
 
 \vspace{0.2cm}
 \noindent
 \begin{tabular*}{\textwidth}{@{\extracolsep{\fill}} l r}
-\textbf{Rental and Item Management Website (PHP, JavaScript, MySQL)} \href{#}{\textcolor{blue}{\faGithub}} & \textbf{2024 \faCalendar} \
+\textbf{Job Matcher (Python, Flask, Scikit-learn, PyPDF2, docx2txt)} \href{#}{\textcolor{blue}{\faGithub}} & \textbf{2024 \faCalendar} \\
 \end{tabular*}
 \begin{itemize}[leftmargin=*,itemsep=1pt,topsep=1pt,parsep=0pt,label=\textcolor{blue}{\faArrowCircleRight}]
-    \item Dynamic website featuring user registration, rental management, interactive maps, and an admin dashboard.
+    \item Developed a web application that matches CVs and job descriptions using cosine similarity and the Flask framework.
 \end{itemize}
 
 \vspace{0.2cm}
 \noindent
 \begin{tabular*}{\textwidth}{@{\extracolsep{\fill}} l r}
-\textbf{Job Matcher (Python, Flask)} \href{#}{\textcolor{blue}{\faGithub}} & \textbf{2024 \faCalendar} \
+\textbf{Interactive Dashboard Web App (Streamlit, Python, Pandas, Plotly, Deck.gl)} \href{#}{\textcolor{blue}{\faGithub}} & \textbf{2024 \faCalendar} \\
 \end{tabular*}
 \begin{itemize}[leftmargin=*,itemsep=1pt,topsep=1pt,parsep=0pt,label=\textcolor{blue}{\faArrowCircleRight}]
-    \item Web application that matches CVs and job descriptions using cosine similarity and the Flask framework.
+    \item Built an interactive data visualization and analysis web app with Streamlit.
 \end{itemize}
 
+\vspace{0.2cm}
+\noindent
+\begin{tabular*}{\textwidth}{@{\extracolsep{\fill}} l r}
+\textbf{Gesture-Controlled Shooting Game (Pygame, OpenCV, MediaPipe)} \href{#}{\textcolor{blue}{\faGithub}} & \textbf{2024 \faCalendar} \\
+\end{tabular*}
+\begin{itemize}[leftmargin=*,itemsep=1pt,topsep=1pt,parsep=0pt,label=\textcolor{blue}{\faArrowCircleRight}]
+    \item Built a game where players control actions through hand gestures detected with OpenCV and MediaPipe.
+\end{itemize}
 
 % ==== Certifications ====
 \CertificationsSection
