--- a/test.tex
+++ b/test.tex
@@ -126,30 +126,19 @@ Currently pursuing a Master’s degree in \textbf{Software Engineering for the W
 \ProjectsSection
 \noindent
 \begin{tabular*}{\textwidth}{@{\extracolsep{\fill}} l r}
-\textbf{Interactive Dashboard Web App (Streamlit, Python)} \href{#}{\textcolor{blue}{\faGithub}} & \textbf{2024 \faCalendar} \
+\textbf{Job Matcher (Python, Flask)} \href{#}{\textcolor{blue}{\faGithub}} & \textbf{2024 \faCalendar} \\
 \end{tabular*}
 \begin{itemize}[leftmargin=*,itemsep=1pt,topsep=1pt,parsep=0pt,label=\textcolor{blue}{\faArrowCircleRight}]
-    \item Built an interactive data visualization and analysis web app with Streamlit.
+    \item Web application that matches CVs and job descriptions using cosine similarity.
 \end{itemize}
 
 \vspace{0.2cm}
-
 \noindent
 \begin{tabular*}{\textwidth}{@{\extracolsep{\fill}} l r}
-\textbf{Amazon Reviews Sentiment Analysis (Python, NLTK, Transformers)} \href{#}{\textcolor{blue}{\faGithub}} & \textbf{2024 \faCalendar} \
+\textbf{Interactive Dashboard Web App (Python, Streamlit)} \href{#}{\textcolor{blue}{\faGithub}} & \textbf{2024 \faCalendar} \\
 \end{tabular*}
 \begin{itemize}[leftmargin=*,itemsep=1pt,topsep=1pt,parsep=0pt,label=\textcolor{blue}{\faArrowCircleRight}]
-    \item Performed sentiment analysis on Amazon reviews using pre‑processed data and models such as Vader and RoBERTa.
-\end{itemize}
-
-\vspace{0.2cm}
-
-\noindent
-\begin{tabular*}{\textwidth}{@{\extracolsep{\fill}} l r}
-\textbf{Job Matcher (Python, Flask, Scikit‑learn)} \href{#}{\textcolor{blue}{\faGithub}} & \textbf{2024 \faCalendar} \
-\end{tabular*}
-\begin{itemize}[leftmargin=*,itemsep=1pt,topsep=1pt,parsep=0pt,label=\textcolor{blue}{\faArrowCircleRight}]
-    \item Developed a web application that matches CVs and job descriptions using cosine similarity.
+    \item Interactive data visualization and analysis web app with Streamlit.
 \end{itemize}
 
 
