--- a/lettre_20251001_163714.tex
+++ b/lettre_20251001_163714.tex
@@ -6,6 +6,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage{array}
 \usepackage{xcolor}
+\definecolor{amazonYellow}{HTML}{ff9900}
 \usepackage[hidelinks]{hyperref}
 \usepackage{enumitem}
 \usepackage{pifont}
@@ -13,11 +14,10 @@
 \usepackage{graphicx}
 \usepackage[absolute,overlay]{textpos}
 \usepackage{titlesec}
-\usepackage{tcolorbox} % ✅ For rounded colored boxes
+\usepackage{tcolorbox}
 \usepackage{fontawesome}
 \usepackage{contour}
-\contourlength{0.6pt} % thickness of the outline
-
+\contourlength{1pt}
 
 \setlength{\parindent}{0pt}
 
@@ -25,14 +25,14 @@
 \newcommand{\SectionBox}[1]{%
 \vspace{6pt}
 \begin{tcolorbox}[
-    colback=black!10,    % background color
-    colframe=black!10,   % border same as background
-    boxrule=0pt,        % no visible border
-    arc=8pt,            % rounded corners
+    colback=black!10,
+    colframe=black!10,
+    boxrule=0pt,
+    arc=8pt,
     left=5pt, right=5pt, top=4pt, bottom=4pt,
-    width=\textwidth,   % full width
-    halign=center,      % ✅ centers text horizontally
-    valign=center       % ✅ centers vertically in case of multiple lines
+    width=\textwidth,
+    halign=center,
+    valign=center
 ]
 \textbf{\large #1}
 \end{tcolorbox}
@@ -45,38 +45,38 @@
 \newcommand{\ExperienceSection}[0]{\SectionBox{PROFESSIONAL EXPERIENCE}}
 \newcommand{\ProjectsSection}[0]{\SectionBox{PROJECTS}}
 \newcommand{\CertificationsSection}[0]{\SectionBox{CERTIFICATIONS}}
-\newcommand{\SkillsSection}[0]{\SectionBox{SKILLS}} % <-- NEW COMMAND
+\newcommand{\SkillsSection}[0]{\SectionBox{SKILLS}}
 \newcommand{\LanguagesSection}[0]{\SectionBox{LANGUAGES}}
 
 \begin{document}
-\pagestyle{empty} 
+\pagestyle{empty}
 
 % ==== Photo ====
 \begin{textblock*}{3cm}(16.7cm,0.84cm)
 \includegraphics[width=3.3cm]{Profil-removebg.png}
 \end{textblock*}
 
-% ==== Header inside a rounded box ====
+% ==== Header ====
 \begin{tcolorbox}[
-    colback=black!10,       % background color
-    colframe=black!10,      % border color
-    arc=10pt,              % rounded corners (all sides)
-    boxrule=0pt,           % no visible border
-    width=\textwidth,      % full page width
+    colback=black!10,
+    colframe=black!10,
+    arc=10pt,
+    boxrule=0pt,
+    width=\textwidth,
     left=10pt, right=10pt, top=8pt, bottom=6pt
 ]
 {\Huge\bfseries AZIZ BELHADJ SAYAR}\\[8pt]
-\contour{white}{{\fontsize{18pt}{18pt}\selectfont\textcolor{blue}{Computer Science Student}}}\\[-5pt]
+\contour{black}{{\fontsize{18pt}{18pt}\selectfont\textcolor{amazonYellow}{Computer Science Student}}}\\[-5pt]
 
 \renewcommand{\arraystretch}{0.9}
 \setlength{\tabcolsep}{6pt}
 {\fontsize{9}{10}\selectfont
 \begin{tabular*}{0.6\textwidth}{@{\extracolsep{\fill}} l l l}
-    \textcolor{blue}{\faPhone} \textbf{+33 6 52 64 32 02} &
-    \textcolor{blue}{\faLinkedin} \href{https://linkedin.com/in/azizbelhadjsayar}{\textbf{linkedin.com/in/azizbelhadjsayar}} &
-    \textcolor{blue}{\faEnvelope} \href{mailto:aziz.belhadjsayar@etud.univ-evry.fr}{\textbf{aziz.belhadjsayar@etud.univ-evry.fr}} \\
-    \textcolor{blue}{\faMapMarker}  \textbf{Paris, France} &
-    \textcolor{blue}{\faGithub} \href{https://github.com/azizbelhadjsayar}{\textbf{github.com/azizbelhadjsayar}} \\
+    \textcolor{amazonYellow}{\faPhone} \textbf{+33 6 52 64 32 02} &
+    \textcolor{amazonYellow}{\faLinkedin} \href{https://linkedin.com/in/azizbelhadjsayar}{\textbf{linkedin.com/in/azizbelhadjsayar}} &
+    \textcolor{amazonYellow}{\faEnvelope} \href{mailto:aziz.belhadjsayar@etud.univ-evry.fr}{\textbf{aziz.belhadjsayar@etud.univ-evry.fr}} \\
+    \textcolor{amazonYellow}{\faMapMarker}  \textbf{Paris, France} &
+    \textcolor{amazonYellow}{\faGithub} \href{https://github.com/azizbelhadjsayar}{\textbf{github.com/azizbelhadjsayar}} \\
 \end{tabular*}
 }
 \end{tcolorbox}
@@ -85,124 +85,114 @@
 
 % ==== Profile ====
 \ProfileSection
-Motivated and detail-oriented student passionate about Business Intelligence and software development.  
-Currently pursuing a Master’s degree in \textbf{Software Engineering for the Web} at \textbf{Université Paris-Saclay}.
+Curious and fast-learning \textbf{Computer Science student} passionate about building \textbf{scalable, impactful software}.  
+I believe Amazon is the perfect place for motivated students to take their \textbf{first big step in tech}, learn from the best, and grow through real-world challenges.
+
 
 % ==== Education ====
 \EducationSection
 \noindent
 \begin{tabular*}{\textwidth}{@{\extracolsep{\fill}} l r}
-\textbf{Université Paris-Saclay} & \textbf{Paris, France \faMapMarker} \\
-\textbf{MSc 1 – Software Engineering for the Web} & \textbf{2024 -- 2025 \faCalendar} \\
+\textbf{Université Évry Paris-Saclay} & \textbf{Évry, France \faMapMarker} \\
+\textbf{Master’s Degree – First year in Computer Science, Software Engineering} & \textbf{2024 -- 2025 \faCalendar} \\
 \end{tabular*}
-\begin{itemize}[leftmargin=*,itemsep=1pt,topsep=1pt,parsep=0pt,label=\textcolor{blue}{\faArrowCircleRight}]
-    \item Courses: Software Engineering, Web Development, Databases
-\end{itemize}
 
 \vspace{0.2cm}
 
 \noindent
 \begin{tabular*}{\textwidth}{@{\extracolsep{\fill}} l r}
 \textbf{IHEC Carthage} & \textbf{Tunis, Tunisia \faMapMarker} \\
-\textbf{Bachelor’s in Business Computing (Business Intelligence)} & \textbf{2021 -- 2024 \faCalendar} \\
+\textbf{Bachelor’s in Business Computing (Business Intelligence track)} & \textbf{2021 -- 2024 \faCalendar} \\
 \end{tabular*}
-\begin{itemize}[leftmargin=*,itemsep=1pt,topsep=1pt,parsep=0pt,label=\textcolor{blue}{\faArrowCircleRight}]
-    \item Courses: Business Intelligence, SQL, Data Analysis
-\end{itemize}
 
 % ==== Experience ====
 \ExperienceSection
 \noindent
 \begin{tabular*}{\textwidth}{@{\extracolsep{\fill}} l r}
-\textbf{Tech Solutions} & \textbf{Paris, France \faMapMarker} \\
-\textbf{Junior Web Developer} & \textbf{2023 -- 2024 \faCalendar} \\
+\textbf{Amaris Consulting} & \textbf{Ariana, Tunisia \faMapMarker} \\
+\textbf{Final-year Internship – SMART NETWORK MONITORING} & \textbf{February 2025 -- May 2025 \faCalendar} \\
 \end{tabular*}
-\begin{itemize}[leftmargin=*,itemsep=1pt,topsep=1pt,parsep=0pt,label=\textcolor{blue}{\faArrowCircleRight}]
-    \item Developed an internal web application using Python and Angular
-    \item Optimized SQL database performance
+\begin{itemize}[leftmargin=*,itemsep=1pt,topsep=1pt,parsep=0pt,label=\textcolor{amazonYellow}{\faArrowCircleRight}]
+    \item Centralized and processed heterogeneous data sources (\textbf{Oracle, PostgreSQL, Excel}) in \textbf{Microsoft Fabric} to build a unified and scalable data lakehouse.
+    \item Developed and deployed predictive models within \textbf{Microsoft Fabric} to enhance network quality analysis.
+    \item Designed interactive \textbf{Power BI} dashboards and a \textbf{Streamlit} web application for business-oriented insights.
 \end{itemize}
 
 % ==== Projects ====
 \ProjectsSection
+
+% --- Job Matcher ---
 \noindent
 \begin{tabular*}{\textwidth}{@{\extracolsep{\fill}} l r}
-\textbf{Interactive Dashboard (Python, Streamlit)} \href{https://github.com/azizbelhadjsayar/dashboard-data}{\textcolor{blue}{\faGithub}} & \textbf{2024 \faCalendar} \\
+\textbf{Job Matcher – AI-Powered Recruitment Tool (Python, Flask, Scikit-learn)} & \textbf{Nov 2024 \faCalendar} \\
 \end{tabular*}
-\begin{itemize}[leftmargin=*,itemsep=1pt,topsep=1pt,parsep=0pt,label=\textcolor{blue}{\faArrowCircleRight}]
-    \item Data analysis and visualization of real-world datasets with interactive charts.
+\begin{itemize}[leftmargin=*,itemsep=1pt,parsep=0pt,topsep=1pt,label=\textcolor{amazonYellow}{\faArrowCircleRight}]
+    \item Developed a web app that matches CVs with job descriptions using cosine similarity and machine learning.
 \end{itemize}
 
 \vspace{0.2cm}
+
+% --- Amazon Reviews Sentiment Analysis ---
 \noindent
 \begin{tabular*}{\textwidth}{@{\extracolsep{\fill}} l r}
-\textbf{Gesture-Controlled Game (Python, OpenCV, MediaPipe)} \href{https://github.com/azizbelhadjsayar/dashboard-data}{\textcolor{blue}{\faGithub}} & \textbf{2023 \faCalendar} \\
+\textbf{Amazon Reviews Sentiment Analysis (Python, NLTK, Transformers)} & \textbf{Nov 2024 \faCalendar} \\
 \end{tabular*}
-\begin{itemize}[leftmargin=*,itemsep=1pt,topsep=1pt,parsep=0pt,label=\textcolor{blue}{\faArrowCircleRight}]
-    \item Interactive game using real-time hand movement detection.
+\begin{itemize}[leftmargin=*,itemsep=1pt,parsep=0pt,topsep=1pt,label=\textcolor{amazonYellow}{\faArrowCircleRight}]
+    \item Built an NLP pipeline using RoBERTa and VADER models to analyze Amazon reviews and extract insights.
 \end{itemize}
 
 \vspace{0.2cm}
+
+% --- Rental and Item Management Website ---
 \noindent
 \begin{tabular*}{\textwidth}{@{\extracolsep{\fill}} l r}
-\textbf{Library Management App (Java Swing, MySQL)} \href{https://github.com/azizbelhadjsayar/dashboard-data}{\textcolor{blue}{\faGithub}} & \textbf{2023 \faCalendar} \\
+\textbf{Rental and Item Management Website (PHP, JavaScript, MySQL, Leaflet)} & \textbf{Feb 2024 -- Apr 2024 \faCalendar} \\
 \end{tabular*}
-\begin{itemize}[leftmargin=*,itemsep=1pt,topsep=1pt,parsep=0pt,label=\textcolor{blue}{\faArrowCircleRight}]
-    \item Desktop app featuring barcode generation, scanning, and email alerts.
+\begin{itemize}[leftmargin=*,itemsep=1pt,parsep=0pt,topsep=1pt,label=\textcolor{amazonYellow}{\faArrowCircleRight}]
+    \item Created a dynamic website with user registration, rental management, interactive maps, and an admin dashboard.
 \end{itemize}
 
-\vspace{0.2cm}
-\noindent
-\begin{tabular*}{\textwidth}{@{\extracolsep{\fill}} l r}
-\textbf{HR Management App (C\#, .NET, SQL Server)} \href{https://github.com/azizbelhadjsayar/dashboard-data}{\textcolor{blue}{\faGithub}} & \textbf{2022 \faCalendar} \\
-\end{tabular*}
-\begin{itemize}[leftmargin=*,itemsep=1pt,topsep=1pt,parsep=0pt,label=\textcolor{blue}{\faArrowCircleRight}]
-    \item Full CRUD management of employees, locations, departments, and jobs.
-\end{itemize}
 
-% ==== Certifications ====
 % ==== Certifications ====
 \CertificationsSection
-\href{https://www.coursera.org/professional-certificates/google-data-analytics}{Google Data Analytics Professional Certificate} 
-\textcolor{blue}{\Large •} 
-\href{https://www.datacamp.com/courses/data-visualization-with-python}{Data Visualization with Python – DataCamp} 
-\textcolor{blue}{\Large •} 
-\href{https://www.hackerrank.com/skills-verification/sql_intermediate}{SQL (Intermediate) – HackerRank} 
-\textcolor{blue}{\Large •} 
-\href{https://www.kaggle.com/learn/intro-to-machine-learning}{Introduction to Machine Learning – Kaggle} 
-\textcolor{blue}{\Large •} 
-\href{https://www.coursera.org/learn/machine-learning}{Machine Learning – Stanford University} 
-\textcolor{blue}{\Large •} 
-\href{https://www.coursera.org/learn/neural-networks-deep-learning}{Neural Networks and Deep Learning – DeepLearning.AI} 
-\textcolor{blue}{\Large •} 
-\href{https://www.coursera.org/specializations/python}{Python for Everybody – University of Michigan} 
-\textcolor{blue}{\Large •} 
-\href{https://www.freecodecamp.org/learn/javascript-algorithms-and-data-structures/}{JavaScript Algorithms and Data Structures – freeCodeCamp} 
-\textcolor{blue}{\Large •} 
-\href{https://www.udemy.com/course/angular-complete-guide/}{Angular Complete Guide – Udemy}
+\href{https://www.datacamp.com/promo/17m-learners-sale-25}{Data Engineer Associate Certificate}
+\textcolor{amazonYellow}{\Large •}
+\href{https://www.coursera.org/account/accomplishments/verify/CXZ7IOI0TD6F}{Crash Course on Python}
+\textcolor{amazonYellow}{\Large •}
+\href{https://www.credly.com/badges/6df22061-95a2-4c54-a76c-295cfe455591}{Databases and SQL for Data Science}
+\textcolor{amazonYellow}{\Large •}
+\href{https://www.coursera.org/account/accomplishments/verify/3R5XEN72GNZS}{Introduction to Git and GitHub}
+\textcolor{amazonYellow}{\Large •}
+\href{https://www.coursera.org/account/accomplishments/verify/JXBWSBRYUNU3}{Using Python to Interact with the Operating System}
+\textcolor{amazonYellow}{\Large •}
+\href{https://www.coursera.org/account/accomplishments/verify/SM8XZEP2K78Q}{Fundamentals of Java Programming}
+\textcolor{amazonYellow}{\Large •}
+\href{https://www.coursera.org/account/accomplishments/verify/DQSBZLER2K6L}{Object-Oriented Design}
+\textcolor{amazonYellow}{\Large •}
+\href{https://www.coursera.org/account/accomplishments/verify/N6M9GZWNTDHZ}{Software Engineering: Modeling Software Systems using UML}
+\textcolor{amazonYellow}{\Large •}
+\href{https://www.coursera.org/account/accomplishments/specialization/7SKBCLWCU6HL}{Machine Learning}
 
 
 % ==== Skills ====
-% ==== Skills (The fix is here) ====
 \SkillsSection
-\vspace{0.2cm} % Reduce space after the header box to keep it tight
-\noindent\parbox[t]{\textwidth}{ % <-- Encapsulate entire block for flow isolation
+\vspace{0.2cm}
+\noindent\parbox[t]{\textwidth}{
     \tcbset{
         on line,
         colback=gray!20,
         colframe=gray!60,
         arc=4pt,
-        % Tighter padding and height for a sleek look
-        top=1pt, bottom=1pt, 
+        top=1pt, bottom=1pt,
         left=4pt, right=4pt,
         height=16pt,
         valign=center,
         baseline,
-        % Allows width to adjust to content while setting a minimum for small words
         width=auto,
         box align=center
     }
 
-    \noindent\parbox{\textwidth}{ % Ensures the list starts flush left and handles wrapping correctly
+    \noindent\parbox{\textwidth}{
         \tcbox{Python}\hskip 3pt%
         \tcbox{Java}\hskip 3pt%
         \tcbox{C\#}\hskip 3pt%
@@ -224,13 +214,11 @@ Currently pursuing a Master’s degree in \textbf{Software Engineering for the W
         \tcbox{Communication}\hskip 3pt%
         \tcbox{Time Management}%
     }
-} % <-- End of the encapsulation block
-
+}
 
 % ==== Languages ====
 \LanguagesSection
-% ==== Languages Content (Forced to single line without warning) ====
-\hbadness=10000 % <-- Temporarily ignores horizontal spacing warnings
+\hbadness=10000
 \textbf{English:} C2 – \href{https://cert.efset.org/6YsT6y}{\underline{EF SET C2} \faLink} \textbf{ | }
 \textbf{French:} C2 – \href{https://drive.google.com/file/d/1yojzT_8XB7gIulaIKh8TSYeOl8NBXxpR/view}{\underline{TCF C2} \faLink} \textbf{ | }
 \textbf{Arabic:} Native
