--- a/lettre_20251001_163714.tex
+++ b/lettre_20251001_163714.tex
@@ -171,9 +171,10 @@ I believe Amazon is the perfect place for motivated students to take their \text
 \textcolor{amazonYellow}{\Large •}
 \href{https://www.coursera.org/account/accomplishments/verify/N6M9GZWNTDHZ}{Software Engineering: Modeling Software Systems using UML}
 \textcolor{amazonYellow}{\Large •}
-\href{https://www.coursera.org/account/accomplishments/specialization/7SKBCLWCU6HL}{Machine Learning}
+\href{https://www.coursera.org/account/accomplishments/specialization/7SKBCLWCU6HL}{Machine Learning – Stanford Universit}
 
 
+% ==== Skills ====
 % ==== Skills ====
 \SkillsSection
 \vspace{0.2cm}
@@ -195,26 +196,27 @@ I believe Amazon is the perfect place for motivated students to take their \text
     \noindent\parbox{\textwidth}{
         \tcbox{Python}\hskip 3pt%
         \tcbox{Java}\hskip 3pt%
-        \tcbox{C\#}\hskip 3pt%
-        \tcbox{SQL}\hskip 3pt%
-        \tcbox{JavaScript}\hskip 3pt%
-        \tcbox{Angular}\hskip 3pt%
-        \tcbox{Flask}\hskip 3pt%
-        \tcbox{Streamlit}\hskip 3pt%
-        \tcbox{OpenCV}\hskip 3pt%
-        \tcbox{MediaPipe}\hskip 3pt%
-        \tcbox{Git/GitHub}\hskip 3pt%
-        \tcbox{Docker}\hskip 3pt%
-        \tcbox{SQLite}\hskip 3pt%
-        \tcbox{MySQL}\hskip 3pt%
-        \tcbox{Excel}\hskip 3pt%
-        \tcbox{Power BI}\hskip 3pt%
+        \tcbox{C\# / .NET}\hskip 3pt%
+        \tcbox{SQL / MySQL / SQLite}\hskip 3pt%
+        \tcbox{Git / GitHub}\hskip 3pt%
+        \tcbox{Object-Oriented Programming}\hskip 3pt%
+        \tcbox{Data Structures \& Algorithms}\hskip 3pt%
+        \tcbox{Software Engineering}\hskip 3pt%
+        \tcbox{UML Modeling}\hskip 3pt%
+        \tcbox{Machine Learning}\hskip 3pt%
+        \tcbox{Deep Learning}\hskip 3pt%
+        \tcbox{Pandas / NumPy}\hskip 3pt%
+        \tcbox{Web Development}\hskip 3pt%
+        \tcbox{HTML / CSS / JavaScript}\hskip 3pt%
+        \tcbox{APIs / JSON / AJAX}\hskip 3pt%
         \tcbox{Problem Solving}\hskip 3pt%
+        \tcbox{Analytical Thinking}\hskip 3pt%
         \tcbox{Teamwork}\hskip 3pt%
         \tcbox{Communication}\hskip 3pt%
-        \tcbox{Time Management}%
+        \tcbox{Adaptability}%
     }
 }
+
 
 % ==== Languages ====
 \LanguagesSection
