Update location from Paris to Évry

--- a/lettre_20251001_163714.tex
+++ b/lettre_20251001_163714.tex
@@ -75,7 +75,7 @@
     \textcolor{amazonYellow}{\faPhone} \textbf{+33 6 52 64 32 02} &
     \textcolor{amazonYellow}{\faLinkedin} \href{https://linkedin.com/in/azizbelhadjsayar}{\textbf{linkedin.com/in/azizbelhadjsayar}} &
     \textcolor{amazonYellow}{\faEnvelope} \href{mailto:aziz.belhadjsayar@etud.univ-evry.fr}{\textbf{aziz.belhadjsayar@etud.univ-evry.fr}} \\
-    \textcolor{amazonYellow}{\faMapMarker}  \textbf{Paris, France} &
+    \textcolor{amazonYellow}{\faMapMarker}  \textbf{Évry, France} &
     \textcolor{amazonYellow}{\faGithub} \href{https://github.com/azizbelhadjsayar}{\textbf{github.com/azizbelhadjsayar}} \\
 \end{tabular*}
 }
