Fix typo in course link for Machine Learning

--- a/lettre_20251001_163714.tex
+++ b/lettre_20251001_163714.tex
@@ -171,7 +171,7 @@ I believe Amazon is the perfect place for motivated students to take their \text
 \textcolor{amazonYellow}{\Large •}
 \href{https://www.coursera.org/account/accomplishments/verify/N6M9GZWNTDHZ}{Software Engineering: Modeling Software Systems using UML}
 \textcolor{amazonYellow}{\Large •}
-\href{https://www.coursera.org/account/accomplishments/specialization/7SKBCLWCU6HL}{Machine Learning – Stanford Universit}
+\href{https://www.coursera.org/account/accomplishments/specialization/7SKBCLWCU6HL}{Machine Learning – Stanford University}
 
 
 % ==== Skills ====
