Update education dates in lettre document

--- a/lettre_20251001_163714.tex
+++ b/lettre_20251001_163714.tex
@@ -94,7 +94,7 @@ I believe Amazon is the perfect place for motivated students to take their \text
 \noindent
 \begin{tabular*}{\textwidth}{@{\extracolsep{\fill}} l r}
 \textbf{Université Évry Paris-Saclay} & \textbf{Évry, France \faMapMarker} \\
-\textbf{Master’s Degree – First year in Computer Science, Software Engineering} & \textbf{2024 -- 2025 \faCalendar} \\
+\textbf{Master’s Degree – First year in Computer Science, Software Engineering} & \textbf{September 2025 -- Present \faCalendar} \\
 \end{tabular*}
 
 \vspace{0.2cm}
@@ -102,7 +102,7 @@ I believe Amazon is the perfect place for motivated students to take their \text
 \noindent
 \begin{tabular*}{\textwidth}{@{\extracolsep{\fill}} l r}
 \textbf{IHEC Carthage} & \textbf{Tunis, Tunisia \faMapMarker} \\
-\textbf{Bachelor’s in Business Computing (Business Intelligence track)} & \textbf{2021 -- 2024 \faCalendar} \\
+\textbf{Bachelor’s in Business Computing (Business Intelligence track)} & \textbf{September 2022 -- June 2025 \faCalendar} \\
 \end{tabular*}
 
 % ==== Experience ====
